--- a/components/whispering-orangutan-python/overlays/development/deployment-patch.yaml
+++ b/components/whispering-orangutan-python/overlays/development/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap_qe/rhtap-qe:837afae6439fb9162159d7801ea4925a4f41867d@sha256:09bf656af2e065af9c109108d6a92cb35ff20061c4ce7e274ee1a2b038662b6c
         name: container-image  
